Les films sont maintenant gérés Ajoute la détection des films (utilisant guessit), la récupération des infos de ceux ci Affiche les films

--- a/partials/serie-list.html
+++ b/partials/serie-list.html
@@ -9,3 +9,8 @@
 	    </li>
 	</ul>
 </div>
+
+<div class="text-center" ng-hide="series.length > 0">
+<p><br /><br /><br /></p>
+<img src="images/load_big.gif" alt="Chargement" />
+</div>
