--- a/partials/serie.html
+++ b/partials/serie.html
@@ -3,7 +3,7 @@
   <div class="small-12 medium-9 large-10 columns">
   	<h2>{{ serie.nom }}</h2>
   	<br />
-  	<span ng-show="serie.tin_production">Depuis </span>{{ serie.fyear }}<span ng-hide="serie.tin_production">-{{ serie.lyear }}</span> • {{ serie.tepisode_run_time }} min • {{ serie.tgenres }} • {{ serie.torigin_country }} ({{ serie.tnetwork }}) • <span ng-bind-html="serie.tpopularity | stars"></span><br /><br /><br />
+  	<span ng-show="serie.tin_production">Depuis </span>{{ serie.fyear }}<span ng-hide="serie.tin_production">-{{ serie.lyear }}</span> • {{ serie.tepisode_run_time }} min • {{ serie.tgenres }} • {{ serie.torigin_country }} ({{ serie.tnetwork }}) • <span ng-bind-html="serie.tpopularity | ilog | stars"></span><br /><br /><br />
   	<p class="text-justify">
   		{{ serie.toverview }}
   	</p>
