--- a/partials/fichiers.html
+++ b/partials/fichiers.html
@@ -1,11 +1,14 @@
 <div class="row">
 	<div class="small-12 medium-10 medium-centered large-8 columns">
-		<h4>{{ dossier.serveur }}{{ dossier.chemin_complet }}</h4>
+		<h4><a title="Retourner au dossier parent" href="#/{{ dossier.parent > 0 && 'dossier/' + dossier.parent || 'serveurs' }}">{{ dossier.serveur }}{{ dossier.chemin_complet }}</a></h4>
 		<table>
 			<tbody>
 				<tr ng-repeat="fichier in dossier.fichiers | filter:rechercher" ng-class-odd="'calt'">
 					<td><a title="Accéder à ce dossier" href="#/dossier/{{ fichier.id }}" ng-show="fichier.is_dossier"><span class="fi-folder"></span> {{ fichier.nom }}</a><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}" ng-hide="fichier.is_dossier">{{ fichier.nom }}</a></td>
 					<td class="text-center">{{ fichier.taille | humanSize }}</td>
+				</tr>
+				<tr ng-show="dossier.fichiers.length == 0">
+					<td colspan="2" class="text-center">Aucun fichier</td>
 				</tr>
 			</tbody>
 		</table>
