--- a/partials/film.html
+++ b/partials/film.html
@@ -16,7 +16,7 @@
 		<table>
 			<tbody>
 				<tr ng-repeat="fichier in film.fichiers" ng-class-odd="'calt'">
-					<td><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}">{{ fichier.nom }}</a></td>
+					<td><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}"><span class="fi-folder"></span></a></td>
 					<td class="text-center">{{ fichier.langue }}</td>
 					<td class="text-center">{{ fichier.qualite }}</td>
 					<td class="text-center">{{ fichier.taille | humanSize }}</td>
@@ -29,7 +29,7 @@
 		<table>
 			<tbody>
 				<tr ng-repeat="fichier in film.sub" ng-class-odd="'calt'">
-					<td><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}">{{ fichier.nom }}</a></td>
+					<td><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}"><span class="fi-folder"></span></a></td>
 					<td class="text-center">{{ fichier.langue }}</td>
 					<td class="text-center">{{ fichier.taille | humanSize }}</td>
 					<td class="text-center">{{ fichier.serveur }}</td>
