--- a/partials/serie-list.html
+++ b/partials/serie-list.html
@@ -14,3 +14,10 @@
 <p><br /><br /><br /></p>
 <img src="images/load_big.gif" alt="Chargement" />
 </div>
+
+<div ng-hide="series.length == 0">
+	<div class="text-center" ng-show="(serie in series | filter:rechercher).length == 0">
+	<p><br /></p>
+	Appuyez sur Entrée pour rechercher dans tous les fichiers ;-)
+	</div>
+</div>
