--- a/partials/film.html
+++ b/partials/film.html
@@ -19,6 +19,7 @@
 					<td><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}" ng-click="clickf(fichier.fichier)">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}" ng-click="clickf(fichier.parent)"><span class="fi-folder"></span></a></td>
 					<td class="text-center">{{ fichier.langue }}</td>
 					<td class="text-center">{{ fichier.qualite }}</td>
+					<td class="text-center">{{ fichier.nb_clics }} clic{{ fichier.nb_clics | affs }}</td>
 					<td class="text-center">{{ fichier.taille | humanSize }}</td>
 					<td class="text-center">{{ fichier.serveur }}</td>
 				</tr>
