Ajoute les noms des colonnes

--- a/partials/search.html
+++ b/partials/search.html
@@ -1,10 +1,18 @@
 <div class="row">
 	<div class="small-12 medium-10 medium-centered large-8 columns">
 		<table>
+		    <thead>
+		        <tr>
+		            <th>Nom</th>
+		            <th>Clics</th>
+		            <th>Serveur</th>
+		            <th>Taille</th>
+		        </tr>
+		    </thead>
 			<tbody>
 				<tr ng-repeat="fichier in search.fichiers | filter:rechercher | limitTo: 50" ng-class-odd="'calt'">
 					<td><a title="Accéder à ce dossier" href="#/dossier/{{ fichier.id }}" ng-show="fichier.is_dossier" ng-click="clickf(fichier.id)"><span class="fi-folder"></span> {{ fichier.nom }}</a><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}" ng-hide="fichier.is_dossier" ng-click="clickf(fichier.id)">{{ fichier.nom }}</a> <a title="Accéder au dossier parent" href="#/dossier/{{ fichier.parent }}" ng-hide="fichier.is_dossier || fichier.parent == 0"><span class="fi-folder"></span></a></td>
-					<td>{{ fichier.nb_clics }}</td>
+					<td class="text-center">{{ fichier.nb_clics }}</td>
 					<td>{{ fichier.serveur }}</td>
 					<td class="text-center">{{ fichier.taille | humanSize }}</td>
 				</tr>
