--- a/css/app.css
+++ b/css/app.css
@@ -123,3 +123,29 @@ tr {
 .flashy {
 	color: #2ba6cb;
 }
+select {
+    background-image: none;
+    background-color: rgba(23, 24, 27, 0.8);
+    width: auto;
+    border: none;
+    padding: 8px;
+    letter-spacing: 1px;
+    color: #c6c6c6;
+    text-align: center;
+    font-size: 1em;
+    margin: 0px;
+    margin-bottom: -4px;
+    margin-top: -4px;
+    outline: none;
+}
+select:hover {
+    background-image: none;
+    background-color: rgba(23, 24, 27, 0.8);
+    cursor: pointer;
+}
+select option {
+   color: black;
+}
+select:not(:checked) {
+   color: #2ba6cb;
+}
