--- a/partials/film-list.html
+++ b/partials/film-list.html
@@ -1,6 +1,6 @@
 <div id="list">
 	<ul class="small-block-grid-2 medium-block-grid-3 large-block-grid-8">
-	    <li ng-repeat="film in films | filter:rechercher | limitTo: 120">
+	    <li ng-repeat="film in films | filter:rechercher | orderBy:rtri:rsens() | limitTo:120">
 	    	<a title="Voir cette film" href="#/films/{{ film.tmdbid }}">
 		        <img ng-src="/fruits/api/data/films/poster/{{ film.tmdbid }}_w300.jpg" alt="{{ film.titlefr }}" /><br />
 		        {{ film.titlefr }}
