Corrige un bug dans l'affichage du message explicitant la recherche

--- a/partials/film-list.html
+++ b/partials/film-list.html
@@ -16,7 +16,7 @@
 </div>
 
 <div ng-hide="films.length == 0">
-	<div class="text-center" ng-show="(film in films | filter:rechercher).length == 0">
+	<div class="text-center" ng-show="(films | filter:rechercher).length == 0">
 	<p><br /></p>
 	Appuyez sur Entrée pour rechercher dans tous les fichiers ;-)
 	</div>
