--- a/partials/serie-list.html
+++ b/partials/serie-list.html
@@ -16,7 +16,7 @@
 </div>
 
 <div ng-hide="series.length == 0">
-	<div class="text-center" ng-show="(serie in series | filter:rechercher).length == 0">
+	<div class="text-center" ng-show="(series | filter:rechercher).length == 0">
 	<p><br /></p>
 	Appuyez sur Entrée pour rechercher dans tous les fichiers ;-)
 	</div>
