--- a/partials/film.html
+++ b/partials/film.html
@@ -16,7 +16,7 @@
 		<table>
 			<tbody>
 				<tr ng-repeat="fichier in film.fichiers" ng-class-odd="'calt'">
-					<td><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}" ng-click="clickf(fichier.fichier)">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}" ng-click="clickf(fichier.parent)"><span class="fi-folder"></span></a></td>
+					<td><a title="Télécharger ce fichier" href="ftp://{{ fichier.serveur }}{{ fichier.chemin_complet }}" ng-click="clickf(fichier.fichier); (fichier.nb_clics = 1*fichier.nb_clics + 1)">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}" ng-click="clickf(fichier.parent)"><span class="fi-folder"></span></a></td>
 					<td class="text-center">{{ fichier.langue }}</td>
 					<td class="text-center">{{ fichier.qualite }}</td>
 					<td class="text-center">{{ fichier.nb_clics }} clic{{ fichier.nb_clics | affs }}</td>
