Ameliore la gestion des bots

--- a/partials/fichiers.html
+++ b/partials/fichiers.html
@@ -17,3 +17,8 @@
 		</table>
 	</div>
 </div>
+
+<div class="text-center" ng-hide="page != 'new' || dossier.fichiers.length > 0">
+<p><br /><br /><br /></p>
+<img src="images/load_big.gif" alt="Chargement" />
+</div>
