--- a/partials/film.html
+++ b/partials/film.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-12 medium-3 large-2 columns"><img src="/fruits/api/data/films/poster/{{ film.tmdbid }}.jpg" alt="{{ film.titlefr }}" /></div>
+  <div class="small-12 medium-3 large-2 columns"><img src="api/data/films/poster/{{ film.tmdbid }}.jpg" alt="{{ film.titlefr }}" /></div>
   <div class="small-12 medium-9 large-10 columns">
   	<h2>{{ film.titlefr }}</h2>
   	<br />
