--- a/partials/serie.html
+++ b/partials/serie.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="small-12 medium-3 large-2 columns"><img src="/fruits/api/data/series/poster/{{ serie.tmdbid }}.jpg" alt="{{ serie.nom }}" /></div>
+  <div class="small-12 medium-3 large-2 columns"><img src="api/data/series/poster/{{ serie.tmdbid }}.jpg" alt="{{ serie.nom }}" /></div>
   <div class="small-12 medium-9 large-10 columns">
   	<h2>{{ serie.nom }}</h2>
   	<br />
