Tri mieux les fichiers séries N'affiche plus les fichiers des serveurs disparus Elimine les extensions parasites

--- a/partials/serie-list.html
+++ b/partials/serie-list.html
@@ -5,7 +5,7 @@
 		        <img ng-src="api/data/series/poster/{{ serie.tmdbid }}_w300.jpg" alt="{{ serie.nom }}" /><br />
 		        {{ serie.nom }}<br />
 	    	</a>
-	        <div class="legende">{{ serie.nbseasons }} saisons / {{ serie.tnbseasons }}</div>
+	        <div class="legende">{{ serie.nbseasons }} saison{{ serie.nbseasons | affs }} / {{ serie.tnbseasons }}</div>
 	    </li>
 	</ul>
 </div>
