--- a/partials/artist.html
+++ b/partials/artist.html
@@ -15,7 +15,7 @@
 		<table>
 			<tbody>
 				<tr ng-repeat="track in album.tracks" ng-class="{calt: $even && mid != track.mid, hover: mid == track.mid}" ng-click="afffiles(album.alid, track.mid, track.files)" class="secondc">
-					<td ng-click="play(track.files[0])"><span class="fi-play"></span></td>
+					<td><a title="Lecture" ng-click="play(track.files[0])"><span class="fi-play-circle"></span></a></td>
 					<td class="text-center"><strong>{{ track.track_position | affZero }}</strong></td>
 					<td>{{ track.title }}</td>
 					<td class="text-center">{{ track.duration }}</td>
@@ -38,9 +38,9 @@
 		</table>
 	</div>
 	</div>
-	<p><br /><br /></p>
+	<p style="clear: both; margin-top: 10px; margin-bottom: 10px;"><br /></p>
 </div>
 
-<audio ng-model="audio" controls autoplay >
-    <source ng-src="{{audio.mp3}}" type='audio/mp3'></source>
+<audio controls autoplay >
+    <source ng-src="{{audio_mp3}}" type='audio/mp3'></source>
 </audio>
