--- a/partials/artist.html
+++ b/partials/artist.html
@@ -27,8 +27,8 @@
 	<div ng-show="palid == album.alid">
 		<table>
 			<tbody>
-				<tr ng-repeat="fichier in fichiers" ng-class-odd="'calt'">
-					<td><a title="Télécharger ce fichier" href="ftp://{{ (fichier.serveur == 'thunder' && seuil()) && 'thunder2' || fichier.serveur }}{{ fichier.chemin_complet }}" ng-click="clickf(fichier.fichier); (fichier.nb_clics = 1*fichier.nb_clics + 1)">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}" ng-click="clickf(fichier.parent)"><span class="fi-folder"></span></a></td>
+				<tr ng-repeat="fichier in fichiersm" ng-class-odd="'calt'">
+					<td><a title="Télécharger ce fichier" href="ftp://{{ (fichier.serveur == 'thunder' && fichier.seuil()) && 'thunder2' || fichier.serveur }}{{ fichier.chemin_complet }}" ng-click="clickf(fichier.fichier); (fichier.nb_clics = 1*fichier.nb_clics + 1)">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}" ng-click="clickf(fichier.parent)"><span class="fi-folder"></span></a></td>
 					<td class="text-center">{{ fichier.nb_clics }}</td>
 					<td class="text-center">{{ fichier.taille | humanSize }}</td>
 					<td class="text-center">{{ fichier.serveur }}</td>
@@ -40,7 +40,3 @@
 	</div>
 	<p style="clear: both; margin-top: 10px; margin-bottom: 10px;"><br /></p>
 </div>
-
-<audio controls autoplay>
-    <source ng-src="{{audio_mp3}}" type='audio/mp3'></source>
-</audio>
