--- a/partials/artist.html
+++ b/partials/artist.html
@@ -27,7 +27,7 @@
 	<div ng-show="palid == album.alid">
 		<table>
 			<tbody>
-				<tr ng-repeat="fichier in fichiersm" ng-class-odd="'calt'">
+				<tr ng-repeat="fichier in ftracks" ng-class-odd="'calt'">
 					<td><a title="Télécharger ce fichier" href="ftp://{{ (fichier.serveur == 'thunder' && fichier.seuil()) && 'thunder2' || fichier.serveur }}{{ fichier.chemin_complet }}" ng-click="clickf(fichier.fichier); (fichier.nb_clics = 1*fichier.nb_clics + 1)">{{ fichier.nom }}</a> <a title="Voir le dossier contenant ce fichier" href="#/dossier/{{ fichier.parent }}" ng-click="clickf(fichier.parent)"><span class="fi-folder"></span></a></td>
 					<td class="text-center">{{ fichier.nb_clics }}</td>
 					<td class="text-center">{{ fichier.taille | humanSize }}</td>
