--- a/partials/artist.html
+++ b/partials/artist.html
@@ -6,12 +6,12 @@
 </div>
 
 <div class="row" ng-repeat="album in artist.albums">
-	<div class="small-12 medium-4 large-2 columns">
-		<h3>{{ album.title }}</h3>
+	<div class="small-12 medium-3 large-1 columns">
 		<img src="api/data/music/albums/{{ album.alid }}.jpg" alt="{{ album.title }}" /><br />
-		{{ album.release_date | amCalendar }}
+		<span class="legende">{{ album.release_date | amCalendar }}</span>
 	</div>
-	<div class="small-12 medium-8 large-5 columns">
+	<div class="small-12 medium-9 large-6 columns">
+		<h4>{{ album.title }}</h4>
 		<table>
 			<tbody>
 				<tr ng-repeat="track in album.tracks" ng-class="{calt: $even && pmid != track.mid, hover: pmid == track.mid}" ng-click="afffiles(album.alid, track.mid, track.files)" class="secondc">
