--- a/css/app.css
+++ b/css/app.css
@@ -54,6 +54,9 @@ body {
     padding: 20px;
     margin-top: 70px;
 }
+#lecteurm {
+    visibility: hidden;
+}
 .legende {
 	color: gray;
 	font-size: 0.6em;
