--- a/partials/fichiers.html
+++ b/partials/fichiers.html
@@ -18,7 +18,7 @@
 		</table>
 	</div>
 </div>
-
+<iframe src="" id="download-iframe" style="display:none;" />
 <div class="text-center" ng-hide="page != 'new' || dossier.fichiers.length > 0">
 <p><br /><br /><br /></p>
 <img src="images/load_big.gif" alt="Chargement" />
