--- a/css/app.css
+++ b/css/app.css
@@ -94,6 +94,15 @@ input[type=text]:focus {
     top: -40px;
     margin-bottom: -20px;
 }
+.tplay {
+    width: 20px;
+}
+.tposition {
+    width: 20px;
+}
+.tduree {
+    width: 30px;
+}
 h1, h2, h3, h4, h5, h6 {
 	color: white;
 }
