--- a/partials/artist.html
+++ b/partials/artist.html
@@ -15,10 +15,10 @@
 		<table>
 			<tbody>
 				<tr ng-repeat="track in album.tracks" ng-class="{calt: $even && pmid != track.mid, hover: pmid == track.mid}" ng-click="afffiles(album.alid, track.mid, track.files)" class="secondc">
-					<td><a title="Lecture" ng-click="lplay(track.files[0])"><span class="fi-media-play"></span></a></td>
-					<td class="text-center"><strong>{{ track.track_position | affZero }}</strong></td>
+					<td class="tplay"><a title="Lecture" ng-click="lplay(track.files[0])"><span class="fi-media-play"></span></a></td>
+					<td class="text-center tposition"><strong>{{ track.track_position | affZero }}</strong></td>
 					<td>{{ track.title }}</td>
-					<td class="text-center">{{ track.duration | durees }}</td>
+					<td class="text-center tduree">{{ track.duration | durees }}</td>
 				</tr>
 			</tbody>
 		</table>
