Ne permet le téléchargement d'un dossier que sur Chrome

--- a/partials/artist.html
+++ b/partials/artist.html
@@ -25,6 +25,7 @@
 	</div>
 	<div class="small-12 medium-12 large-5 columns">
 	<div ng-show="palid == album.alid">
+		<h4>&nbsp;</h4>
 		<table>
 			<tbody>
 				<tr ng-repeat="fichier in ftracks" ng-class-odd="'calt'">
