--- a/css/app.css
+++ b/css/app.css
@@ -57,6 +57,12 @@ body {
 #lecteurm {
     visibility: hidden;
 }
+#dlf {
+    height: 0px;
+    width: 0px;
+    overflow: hidden;
+    visibility: hidden;
+}
 .legende {
 	color: gray;
 	font-size: 0.6em;
