--- a/partials/serie.html
+++ b/partials/serie.html
@@ -23,7 +23,7 @@
 	</div>
 	<div class="small-12 medium-9 large-4 columns">
 		<div ng-show="fep">
-		<h3>Épisodes</h3>
+		<h3>Épisodes <a ng-click="preDlSaison(episodes)">.</a></h3>
 		<table>
 			<tbody>
 				<tr ng-repeat="ep in episodes" ng-class="{calt: $even && epn != ep.episode, hover: epn == ep.episode}" ng-click="affepf(ep.episode, ep.ep, ep.sub)" class="secondc">
