--- a/css/app.css
+++ b/css/app.css
@@ -109,6 +109,9 @@ input[type=text]:focus {
 .tduree {
     width: 30px;
 }
+.big {
+    font-size: 1em;
+}
 h1, h2, h3, h4, h5, h6 {
 	color: white;
 }
