--- a/css/app.css
+++ b/css/app.css
@@ -77,19 +77,8 @@ input[type=text] {
 input[type=text]:focus {
 	background: none;
 }
-#serie-focus {
-	position: fixed;
-	top: 20%;
-	left: 10%;
-	width: 100%;
-	height: 100%;
-	overflow: scroll;
-}
-.blur-out {
-    -webkit-filter: blur(8px);
-    opacity: 0.8;
-    -webkit-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
+#rechercher {
+    width: 80%;
 }
 .bsaison {
 }
@@ -108,9 +97,6 @@ input[type=text]:focus {
 }
 .tduree {
     width: 30px;
-}
-.big {
-    font-size: 1em;
 }
 h1, h2, h3, h4, h5, h6 {
 	color: white;
