--- a/css/app.css
+++ b/css/app.css
@@ -73,7 +73,7 @@ body {
 	font-size: 0.6em;
 	margin-top: -6px;
 }
-input[type=text] {
+input[type=text], input[type=submit] {
 	background: none;
 	color: white;
 	border-radius: 5px;
