--- a/partials/serie-list.html
+++ b/partials/serie-list.html
@@ -18,6 +18,7 @@
 <div ng-hide="series.length == 0">
 	<div class="text-center" ng-show="(series | filter:rechercher).length == 0">
 	<p><br /></p>
-	Appuyez sur Entrée pour rechercher dans tous les fichiers ;-)
+	Appuyez sur Entrée pour rechercher dans tous les fichiers ;-)<br /><br />
+	Si vous trouvez qu'il manque une série, <a title="Demander le téléchargement d'une série" href="#/suggest">vous pouvez la réclamer ici</a>.
 	</div>
 </div>
